--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ body {
     background-color:rgb(20, 22, 17);
     border:5px solid rgb(20, 22, 17);
     padding:10px;
+    box-shadow:0px 0px 10px 0px black, 0px 0px 20px 0px black;
 }
 #topnav a{
     color:white;
@@ -18,16 +19,18 @@ body {
 }
 #topnav a:hover{
     background-color:rgb(47, 196, 47);
+    box-shadow:0px 0px 10px 0px rgb(47, 196, 47), 0px 0px 20px 0px rgb(47, 196, 47);
     transition:ease-in-out 0.3s;
     color:black;
 }
 .focim{
     text-align:center;
-
     font-size:70px;
     cursor:default;
     margin-bottom:25px;
     margin-top:25px;
+    margin-top:40px;
+    margin-bottom:40px;
 }
 
 .focim span{
@@ -35,18 +38,29 @@ body {
     color:rgb(255, 255, 255);
     border:5px solid rgb(47, 196, 47);
     border-radius:100%;
-    padding:25px;
+    padding:15px;
     padding-left:45px;
     padding-right:45px;
     transition: ease-in-out 0.3s;
+    background-color: rgba(19, 19, 22, 0.37);
+    font-family:cursive;
+    cursor:pointer;
+    box-shadow:0px 0px 10px 0px black, 0px 0px 20px 0px black;
 }
 .focim span:hover{
     font-size:130px;
     transition: ease-in-out 0.3s;
-    padding:25px;
-    padding-left:50px;
-    padding-right:50px;
+    box-shadow:0px 0px 10px 0px rgb(47, 196, 47), 0px 0px 20px 0px rgb(47, 196, 47);
+   
+    background-color:rgba(255, 255, 255, 0.164);
+    color:rgb(255, 255, 255);
+    border:3px solid rgba(0, 0, 0, 0);
+
 }
 p{
     margin-right:190px;
+}
+.focim a{
+    text-decoration:none;
+
 }
