--- a/index.css
+++ b/index.css
@@ -2,12 +2,14 @@ body {
     background-color:rgb(44, 49, 38);
     color:rgb(47, 196, 47);
     font-family:Arial, Helvetica, sans-serif;
+   
 }
 #topnav{
     background-color:rgb(20, 22, 17);
     border:5px solid rgb(20, 22, 17);
     padding:10px;
     box-shadow:0px 0px 10px 0px black, 0px 0px 20px 0px black;
+    
 }
 #topnav a{
     color:white;
@@ -34,11 +36,11 @@ body {
 }
 
 .focim span{
-    font-size:115px;
+    font-size:100px;
     color:rgb(255, 255, 255);
     border:5px solid rgb(47, 196, 47);
     border-radius:100%;
-    padding:15px;
+    padding:5px;
     padding-left:45px;
     padding-right:45px;
     transition: ease-in-out 0.3s;
@@ -48,11 +50,11 @@ body {
     box-shadow:0px 0px 10px 0px black, 0px 0px 20px 0px black;
 }
 .focim span:hover{
-    font-size:130px;
+    font-size:105px;
     transition: ease-in-out 0.3s;
     box-shadow:0px 0px 10px 0px rgb(47, 196, 47), 0px 0px 20px 0px rgb(47, 196, 47);
    
-    background-color:rgba(255, 255, 255, 0.164);
+    background-color:rgb(95, 5, 180);
     color:rgb(255, 255, 255);
     border:3px solid rgba(0, 0, 0, 0);
 
@@ -79,4 +81,25 @@ p{
     height:auto;
     text-align:center;
 
+}
+.h2fooldal{
+    font-size:40px;
+    margin-left:325px;
+}
+.azoldalrolfooldal{
+   
+    font-size:35px;
+    
+    text-align:left;
+}
+#azoldalrolfooldal{
+    cursor:default;
+    margin-left:25px;
+    color:rgba(255, 255, 255, 0.61);
+    background:rgba(0, 0, 0, 0.336);
+    
+}
+.felsoszegely{
+    width:100%;
+    height:150px;
 }
