--- a/index.css
+++ b/index.css
@@ -108,3 +108,41 @@ p{
     margin-left:-10px;
     margin-right:-30px;
 }
+.legsikeresebbkep{
+    position:relative;
+    display:inline-block;
+    padding:15px;
+    font-size:20px;
+    
+}
+.legsikeresebbalairas{
+    display:none;
+    position:absolute;
+    background-color:rgb(21, 22, 19);
+    font-weight:bold;
+    margin-top:-10px;
+    word-spacing: 2px;
+    text-align:center;
+    padding-top:15px;
+    min-width:160px;
+    z-index:1;
+    box-shadow:0px 0px 10px 0px rgb(20, 22, 17), 0px 0px 20px 0px black;
+   
+}
+.legsikeresebbkep:hover .legsikeresebbalairas{
+    display:block;
+    cursor:default;
+    
+}
+.legsikeresebbalairas td{
+    padding-bottom:25px;
+    padding-right:20px;
+    
+    
+}
+.legsikeresebbkep img{
+    box-shadow:0px 0px 10px 0px rgb(20, 22, 17), 0px 0px 20px 0px black;
+}
+.legsikeresebbkep:hover img{
+    cursor:pointer;
+}
