apró css módosítás

--- a/index.css
+++ b/index.css
@@ -127,12 +127,12 @@ p{
     min-width:160px;
     z-index:1;
     box-shadow:0px 0px 10px 0px rgb(20, 22, 17), 0px 0px 20px 0px black;
-   
+   transition:ease-in-out 0.3s;
 }
 .legsikeresebbkep:hover .legsikeresebbalairas{
     display:block;
     cursor:default;
-    
+    transition:ease-in-out 0.3s;
 }
 .legsikeresebbalairas td{
     padding-bottom:25px;
