--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@ p{
     height:150px;
     margin-left:-10px;
     margin-right:-30px;
+    margin-top:-8px;
 }
 .legsikeresebbkep{
     position:relative;
