--- a/index.css
+++ b/index.css
@@ -123,10 +123,11 @@ p{
     font-size:20px;
     transition:ease-in-out 0.3s;
     margin-left:400px;
-
-   
+    
+    
 }
 .legsikeresebbalairas{
+    
     display:none;
     border:1px solid rgba(255, 255, 255, 0.148);
     margin-right:13px;
@@ -148,6 +149,8 @@ p{
     display:block;
     cursor:default;
     transition:ease-in-out 0.3s;
+    
+    
 }
 .legsikeresebbalairas td{
     padding-bottom:25px;
@@ -158,11 +161,23 @@ p{
     
 }
 .legsikeresebbkep img{
-    box-shadow:0px 0px 10px 0px rgb(20, 22, 17), 0px 0px 20px 0px black;
+    overflow:hidden;
+    border:5px solid rgb(26, 23, 27);
+    box-shadow:0px 0px 10px 0px rgb(0, 0, 0), 0px 0px 20px 0px rgb(138,26,173);
+    border-radius:100%;
+    transition:ease-in-out 0.3s;
+    
+    
 }
 .legsikeresebbkep:hover img{
     cursor:pointer;
+    border-radius:1vh;
+    transition:ease-in-out 0.3s;
+    width:
+    max-width:100%;
+    max-height:100%;
 }
+
 .legsikeresebbalairas td:hover{
 color:white;
 }
@@ -173,4 +188,7 @@ color:white;
     margin-left:-8px;
     margin-right:-70px;
     margin-top:-20px;
+}
+#srtablazat{
+    font-size:30px;
 }
