--- a/index.css
+++ b/index.css
@@ -127,7 +127,8 @@ p{
     font-size:20px;
     transition:ease-in-out 0.3s;
     margin-left:400px;
-    
+    transition:width 1s;
+
     
 }
 .legsikeresebbalairas{
@@ -146,13 +147,15 @@ p{
     padding-top:15px;
     min-width:160px;
     z-index:1;
+    
     box-shadow:0px 0px 10px 0px rgb(0, 0, 0), 0px 0px 50px 15px rgb(0, 0, 0);
-    transition:ease-in-out 0.3s;
 }
 .legsikeresebbkep:hover .legsikeresebbalairas{
     display:block;
     cursor:default;
     transition:ease-in-out 0.3s;
+    width:1000px;
+    
     
     
 }
@@ -169,7 +172,6 @@ p{
     border:2px solid rgb(26, 23, 27);
     box-shadow:0px 0px 10px 0px rgb(0, 0, 0), 0px 0px 50px 15px rgb(0, 0, 0);
     border-radius:40%;
-    transition:ease-in-out 0.3s;
     
     
 }
@@ -226,13 +228,21 @@ color:white;
 .sjh1{
     text-align:center;
     font-family: cursive;
-    padding-bottom:25px;
-    font-size:22px;
+    padding:25px;
+    margin:auto;
+    font-size:33px;
+    margin-bottom:50px;
     border:3px solid rgb(116, 18, 155);
     background-color:rgba(0, 0, 0, 0.397);
     border-radius:5vh;
+    transition:ease-in-out 0.3s;
+    cursor:default;
+    box-shadow:0px 0px 10px 0px rgb(116, 18, 155), 0px 0px 20px 0px rgb(116, 18, 155);
+    width:fit-content;
 }
 .sjh1:hover{
-    border:3px solid rgb(255, 255, 255);
-    font-size:2px;
+    border:5px solid rgb(255, 255, 255);
+    font-size:35px;
+    transition:ease-in-out 0.3s;
+    box-shadow:0px 0px 10px 0px rgb(255, 255, 255), 0px 0px 20px 0px rgb(22, 21, 21);
 }
