--- a/index.css
+++ b/index.css
@@ -120,15 +120,40 @@ p{
     margin-right:-30px;
     margin-top:-8px;
 }
+.sikerescontainer{
+    width:400px;
+    height:221px;
+    overflow:hidden;
+    border:0px solid black;
+    border-radius:100%;
+}
+.legsikeresebbkep img{
+    width:100%;
+    height:100%;
+    background-position:center;
+    background-size:cover;
+    overflow:hidden;
+    border:2px solid rgb(26, 23, 27);
+    border-radius:100%;
+    
+    transition:0.7s;
+    
+}
+.legsikeresebbkep img:hover{
+    transform:scale(1.1);
+}
 .legsikeresebbkep{
+    box-shadow:0px 0px 10px 0px rgb(0, 0, 0), 0px 0px 50px 15px rgb(0, 0, 0);
     position:relative;
+    border-radius:50%;
     display:inline-block;
-    padding:15px;
+    
     font-size:20px;
     transition:ease-in-out 0.3s;
     margin-left:400px;
-    transition:width 1s;
+    margin-bottom:100px;
 
+    
     
 }
 .legsikeresebbalairas{
@@ -145,16 +170,17 @@ p{
     word-spacing: 2px;
     text-align:center;
     padding-top:15px;
+    transition:ease-in-out 0.3s;
     min-width:160px;
     z-index:1;
-    
+    width:120%;
     box-shadow:0px 0px 10px 0px rgb(0, 0, 0), 0px 0px 50px 15px rgb(0, 0, 0);
 }
 .legsikeresebbkep:hover .legsikeresebbalairas{
     display:block;
     cursor:default;
     transition:ease-in-out 0.3s;
-    width:1000px;
+    
     
     
     
@@ -167,20 +193,12 @@ p{
     
     
 }
-.legsikeresebbkep img{
-    overflow:hidden;
-    border:2px solid rgb(26, 23, 27);
-    box-shadow:0px 0px 10px 0px rgb(0, 0, 0), 0px 0px 50px 15px rgb(0, 0, 0);
-    border-radius:40%;
-    
-    
-}
 .legsikeresebbkep:hover img{
     cursor:pointer;
     border-radius:2vh;
     transition:ease-in-out 0.3s;
-    max-width:100%;
-    max-height:100%;
+    
+    width:125%;
 }
 
 .legsikeresebbalairas td:hover{
@@ -232,8 +250,8 @@ color:white;
     margin:auto;
     font-size:33px;
     margin-bottom:50px;
-    border:3px solid rgb(116, 18, 155);
-    background-color:rgba(0, 0, 0, 0.397);
+    border:3px solid rgb(230, 18, 124);
+    background-color:rgba(77, 23, 94, 0.685);
     border-radius:5vh;
     transition:ease-in-out 0.3s;
     cursor:default;
@@ -241,8 +259,9 @@ color:white;
     width:fit-content;
 }
 .sjh1:hover{
-    border:5px solid rgb(255, 255, 255);
+    border:3px solid rgb(255, 255, 255);
     font-size:35px;
     transition:ease-in-out 0.3s;
     box-shadow:0px 0px 10px 0px rgb(255, 255, 255), 0px 0px 20px 0px rgb(22, 21, 21);
 }
+
