--- a/index.css
+++ b/index.css
@@ -93,9 +93,21 @@ p{
 
 }
 .h2fooldal{
-    font-size:50px;
-    padding-right:100px;
-    text-align:center;
+    font-size:60px;
+    margin-left:275px;
+    z-index:-1;
+    margin-bottom:-50px;
+    background-color:rgba(26, 186, 45, 0.411);
+    width:fit-content;
+    border-radius:15vh;
+    padding:15px;
+    cursor:default;
+    color:rgb(255, 255, 255);
+    border:5px solid black;
+}
+.h2fooldal:hover{
+    text-decoration:3px underline;
+    transition:0.3s;
 }
 .azoldalrolfooldal{
 }
@@ -107,10 +119,11 @@ p{
     cursor:default;
     margin-left:25px;
     color:rgba(255, 255, 255, 0.63);
-    background:rgba(47, 141, 19, 0.336);
+    background:rgba(23, 19, 141, 0.336);
     width:2000px;
     height:500px;
     text-align:justify;
+    margin-bottom:250px;
     
 }
 .felsoszegely{
@@ -216,21 +229,31 @@ color:white;
     font-size:30px;
 }
 .mufaj-kep2 {
-    width: 400px;
-    height: 250px;
+    border:yellowgreen solid 5px;
+    border-radius:20px;
 }
 
 .mufaj-kep {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column-reverse;
-    text-align: center;
-}
+   display:none;}
 
 .li-elem {
     max-width: 100rem;
     text-align: justify;
 }
+button{
+    background:rgb(176, 50, 235);
+    color:rgb(248, 248, 248);
+    border-radius:5px;
+    font-size:20px;
+}
+
+.flex{
+    display:flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-wrap:wrap;
+}
+
 
 .tortenet-p {
     max-width: 100rem;
@@ -263,5 +286,13 @@ color:white;
     font-size:35px;
     transition:ease-in-out 0.3s;
     box-shadow:0px 0px 10px 0px rgb(255, 255, 255), 0px 0px 20px 0px rgb(22, 21, 21);
+}
+.alsoszegely{
+    width:102%;
+    height:150px;
+    margin-left:-10px;
+    margin-right:-30px;
+  
+    position:absolute;
 }
 
